New Features and Bug Fixes since v0.2, preview 1

 * Fixed the "reference to rebound class within another class" problem
   with module inheritance, as reported by (who else?) Ulrich Eck.  :)

 * Rewrote SEF "features" to use 'element.verbFeature()' style methods
   instead of 'element.feature.verb()' style.  UML/XMI/Querying code
   still uses the old-style SEF framework, which is still available from
   'TW.SEF.FeatureObjects'.  See the docs of 'TW.SEF.Basic.FeatureMC'
   and 'TW.API.Meta.MethodExporter' for details on how new-style methods
   work.

 * Fixed misc. bugs in 'DataModel', 'LDAPModel', 'Connections', and
   'TW.Caching' found by Ulrich Eck.  Thanks Ulrich!  Also, added a fix
   to ensure that non-existent records are invalidated by
   'RecordType.getItem()'.

 * Added basic Specialist implementation to 'TW.SEF.Basic', and reverted
   naming from 'TypeService' and 'ITypeService' to 'Specialist' and
   'ISpecialist'.  Updated 'TW.SEF.Interfaces' to reflect "self"-less
   convention for documenting methods.

 * Dropped obsolete 'TW.Database.Records' module.

 * Added 'SEF.bindToParent()' and 'SEF.bindToNames()' specifiers to allow
   more flexible component parameter bindings.

 * Fixed the base class "rebind by name" bugs in module inheritance, and
   updated the documentation to more clearly reflect what it is that
   metaclass generation and module inheritance does and does not do.  Added
   test cases to prevent regression of the rebind-by-name problem.

 * The 'setup.py' script features a new command, 'happy', which can be used
   to generate the API reference docs, and this command runs as part of the
   'sdist' command to build source distributions.

 * The API reference docs in the source distribution has been moved from
   the 'doc' directory to 'docs/html/reference'.

 * Added 'CHANGES.txt' file.